--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -17,8 +18,8 @@
             android:id="@+id/main_preview_image_view"
             android:layout_width="160dp"
             android:layout_height="90dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp" />
 
         <View
             android:id="@+id/main_cut_border_view"
